--- a/app/src/main/res/layout/activity_online_inference.xml
+++ b/app/src/main/res/layout/activity_online_inference.xml
@@ -56,7 +56,7 @@
             app:srcCompat="@drawable/ic_image"
             />
 
-        <!--image view linear layout-->
+        <!--image view linear activity_guide-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
