--- a/app/src/main/res/layout/activity_quick_guide.xml
+++ b/app/src/main/res/layout/activity_quick_guide.xml
@@ -1,42 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
-
-    <!--<android.support.v4.view.ViewPager-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/welcome_pager"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
-
-    <!-- 图片位置指示器 -->
-    <LinearLayout
-        android:id="@+id/director"
+    android:orientation="vertical">
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp_guide"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <RadioGroup
+        android:id="@+id/rg_indicate"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_gravity="bottom|center"
         android:orientation="horizontal"
-        android:layout_marginBottom="15dip"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimaryDark"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/guide_dot_on" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/guide_dot_off" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/guide_dot_off" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/guide_dot_off" />
-    </LinearLayout>
-
-</RelativeLayout>
+        android:paddingBottom="20dp" />
+</FrameLayout>
